--- a/final.css
+++ b/final.css
@@ -1,6 +1,28 @@
 body{
     margin: 0;
 }
+.wrapg{
+    width: 100%;
+    background-color: antiquewhite;
+    margin: 0px;
+    border: 20px antiquewhite solid;
+}
+.main{
+    width: 200px;
+    text-align: center;
+    background-color: rgba(255, 228, 225, 0.5);
+    height: min-content;
+    right: 0px;
+    margin: 20px;
+    position: fixed;
+}
+.col-md-7{
+    margin: 20px;
+}   
+.col-md-5{
+    width: 25%;
+    margin: 20px;
+}   
 .top{
     background: silver;
     width: 100%;
@@ -29,7 +51,7 @@ body{
     justify-content: space-around;
     align-content: center;
 }
-.mid-top>.p{
+.p{
     font-family: DejaVu Sans Mono, monospace;
     color: navy;
     font-size: 16pt;
@@ -41,6 +63,9 @@ body{
     height: min-content;
     display: flex;
     justify-content: space-around;
+}
+.card-group{
+    flex-wrap: wrap;
 }
 .cardimg{
     width: 200px;
@@ -56,8 +81,135 @@ body{
     display: flex;
     justify-content: center;
 }
-.bottom{
-    height: 200px;
-    background-color: DarkSlateGrey;
+.gallery{
+    width: max-content;
+    background-color: antiquewhite;
+    height: max-content;
+    border-top: 10px black dashed;
+    border-bottom: 10px black dashed;
+    display: flex;
+    justify-content: space-around;
+}
+.pa{
+    width: 20%;
+    height: 150px;
+}
+.but{
+    font-size: 16pt;
+    text-align: center;
+    width: 200px;
+    height: min-content;
+    margin: auto;
+    display: block;
+}
+a{
+    text-decoration: none !important;
+    color:  black !important;
+}
+.footer{
     width: 100%;
+    height: 100px;
+    background-color: SlateGrey;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.a>a{
+    color: white !important;
+    font-size: 16pt;
+    height: max-content;
+}
+.a img{
+    width: 25px;
+}
+.gallery {
+    margin: 20px auto;
+}
+.gallery a {
+    display:inline-block;
+    height:150px;
+    position:relative;
+    width:200px;
+}
+.gallery a img {
+    border:5px solid #fff;
+    cursor:pointer;
+    display:block;
+    height:100%;
+    left:0px;
+    position:absolute;
+    top:0px;
+    width:100%;
+    z-index:1;
+
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
+
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    box-sizing:border-box;
+
+    -webkit-transition-property:width, height, top, bottom, left, right, z-index, border;
+    -webkit-transition-duration:0.5s;
+    -moz-transition-property:width, height, top, bottom, left, right, z-index, border;
+    -moz-transition-duration:0.5s;
+    -o-transition-property:width, height, top, bottom, left, right, z-index, border;
+    -o-transition-duration:0.5s;
+    transition-property:width, height, top, bottom, left, right, z-index, border;
+    transition-duration:0.5s;
+}
+.gallery a:focus img {
+    border:15px solid #fff;
+    cursor:default;
+    height:250%;
+    position:absolute;
+    width:250%;
+    z-index:25;
+
+    box-shadow:1px 1px 5px #888;
+    -moz-box-shadow:1px 1px 5px #888;
+    -webkit-box-shadow:1px 1px 5px #888;
+    -webkit-transition-property:width, height, top, bottom, left, right, z-index, border;
+    -webkit-transition-duration:0.5s;
+    -moz-transition-property:width, height, top, bottom, left, right, z-index, border;
+    -moz-transition-duration:0.5s;
+    -o-transition-property:width, height, top, bottom, left, right, z-index, border;
+    -o-transition-duration:0.5s;
+    transition-property:width, height, top, bottom, left, right, z-index, border;
+    transition-duration:0.5s;
+}
+
+/* custom focus rules */
+.gallery a:focus:nth-child(3n+1) img {
+    top: -200px;
+}
+.gallery a:focus:nth-child(3n+2) img {
+    top: -200px;
+}
+.gallery a:focus:nth-child(3n+3) img {
+    top: -200px;
+}
+.gallery a:focus:nth-child(-n+3) img {
+    top: -200px;
+}
+.gallery a:focus:nth-child(n+7) img {
+    top: -200px;
+}
+.gallery a:focus:nth-child(n+10) img {
+    top: -200px;
+}
+.gallery .close {
+    background:transparent;
+    cursor:pointer;
+    display:none;
+    height:352px;
+    left:170px;
+    position:absolute;
+    top:160px;
+    width:500px;
+    z-index:30;
+}
+.gallery a:focus~.close {
+    display:block;
 }
