--- a/static/style.css
+++ b/static/style.css
@@ -226,7 +226,8 @@ table tr{
 
 /* Модальне вікно */
 .modal {
-    max-height: 100%;
+    max-height: 60%;
+    overflow: scroll;
     display: none;
     position: fixed;
     top: 50%;
@@ -236,6 +237,8 @@ table tr{
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .hidden {
@@ -383,6 +386,7 @@ table tr{
 
 .wrapper>button{
     width: 20%;
+    min-width: min-content;
     align-self: center;
     margin-top: 20px;
 }
