--- a/static/style.css
+++ b/static/style.css
@@ -305,13 +305,13 @@ table tr{
 }
 
 .clickable {
-    color: #007bff; 
+    color: #0063cc; 
     cursor: pointer; 
 }
 
 .clickable:hover {
     text-decoration: none;
-    color: #0056b3;
+    color: #003d7e;
 }
 
 .parent-wrapper{
