add posibillity to add and delete staff

--- a/static/style.css
+++ b/static/style.css
@@ -336,7 +336,7 @@ table tr{
 
 .filter-menu{
     margin: auto;
-    width: 70%;
+    max-width: 600px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
