--- a/static/style.css
+++ b/static/style.css
@@ -501,3 +501,9 @@ label>input{
 .sign-in:hover {
     background-color: #e0e0e0;
 }
+
+.login-error{
+    color: red;
+    font-weight: bold;
+    margin: 5px;
+}
