--- a/static/style.css
+++ b/static/style.css
@@ -413,6 +413,7 @@ table tr{
 }
 
 .summary{
+    align-self: flex-end;
     width: 100%;
     display: flex;
     justify-content: end;
@@ -526,4 +527,15 @@ label>input{
 }
 .lesson-title {
     font-weight: bold;
+}
+
+.summary>.total-sum{
+    font-weight: bold;
+    font-size: 1.2em;
+    color: #d32f2f;
+    background-color: #ffd0d0; /* світло-рожевий фон */
+    padding: 10px 20px;
+    border-radius: 10px;
+    display: inline-block;
+    box-shadow: 0 0 5px rgba(0,0,0,0.1);
 }
