--- a/static/iframe-styles.css
+++ b/static/iframe-styles.css
@@ -12,3 +12,8 @@ body::-webkit-scrollbar-thumb{
     background-color: rgb(93, 143, 209);
     border-radius: 5px;
 }
+input[type="radio"]:focus + label {
+    outline: none;
+    box-shadow: 0 0 0 2px rgba(93, 143, 209, 0.6);
+    border-radius: 4px;
+}
