--- a/static/iframe-styles.css
+++ b/static/iframe-styles.css
@@ -12,11 +12,8 @@ body::-webkit-scrollbar-thumb{
     background-color: #0056b3;
     border-radius: 5px;
 }
-input[type="radio"]:focus + label,
-input[type="radio"]:checked + label {
-    outline: none;
-    box-shadow: none;
-}
-label:focus {
-    outline: none;
+label:focus,
+input:focus {
+    outline: none !important;
+    box-shadow: none !important;
 }
