--- a/static/radio-toggle.css
+++ b/static/radio-toggle.css
@@ -73,10 +73,10 @@ body:not(:-moz-handler-blocked) fieldset {
   border-color: #213140;
 }
 .toggle input:checked + label {
-  background-color: #0056b3;
+  background-color: #1787ff;
   color: #FFF;
   box-shadow: 0 0 10px rgba(102, 179, 251, 0.5);
-  border-color: #0056b3;
+  border-color: #1787ff;
   z-index: 1;
 }
 .toggle input:focus + label {
@@ -118,9 +118,8 @@ body:not(:-moz-handler-blocked) fieldset {
   }
 }
 
-input[type="radio"]:focus {
+input[type="radio"]:focus + label {
     outline: none;
-}
-label:focus {
-    outline: none;
+    box-shadow: 0 0 0 0px rgba(93, 143, 209, 0.6);
+    border-radius: 4px;
 }
