fix: ensure fieldset has no border for improved styling consistency

--- a/static/radio-toggle.css
+++ b/static/radio-toggle.css
@@ -4,6 +4,7 @@ fieldset {
   box-sizing: border-box;
   display: block;
   min-width: 0;
+  border: none;
 }
 fieldset legend {
   margin: 0 0 1.5rem;
