--- a/static/style.css
+++ b/static/style.css
@@ -894,3 +894,14 @@ fieldset input[type="date"]{
     font-size: 1.2em;
     font-weight: bold;
 }
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5); /* напівпрозорий чорний */
+  z-index: 999; /* під вікном, але вище всього іншого */
+  display: none;
+}
